hphp/hack/test/typecheck/trait_reuse/name_order2.php.exp
File "name_order2.php", line 16, characters 13-13:
Class `C` inherits trait method `foo` via multiple traits.  Add the __EnableMethodTraitDiamond attribute to `C`, remove the multiple paths, or override the method (Typing[4439])
  File "name_order2.php", line 9, characters 22-24:
  Trait method is defined here
  File "name_order2.php", line 18, characters 7-8:
  `C` uses `T1`
  File "name_order2.php", line 13, characters 7-7:
  `T1` uses `T`
  File "name_order2.php", line 17, characters 7-7:
  `C` uses `T`
